       up if a newer version is actually found. (Stefan)
- CHG: Creating a patch is now possible from single files
       too and not just folders. (Stefan)
- CHG: when setting properties fails, the error message
       is shown and not dropped as before. (Stefan)
- CHG: Don't use the %APPDATA% env but the shell API to
       get the path to the config file in the settings
       dialog. (Stefan)
- BUG: TortoiseMerge could hang when diffing certain files
       and the "ignore leading whitespaces" option turned
       on and only in two pane view. (Stefan)
- BUG: TortoiseMerge could save merges to the wrong file
       if the app wasn't quit between diffs/merges. (Stefan)
- BUG: The context menu key didn't work in the
       repository browser. (Stefan)
- BUG: TSVN could crash if a revprop did not exist. (Stefan)
- BUG: Newlines weren't shown correctly when editing
       the revprops. (Stefan)
- BUG: The default settings for the icon overlays weren't
       shown in the settings dialog. (Stefan)

Version 1.0.6
- ADD: A warning is shown if a file with local modifications
       should be removed. (Stefan)
- ADD: Changing of log-messages and author of any revision
       is possible from the log dialog - if the server has
       the required hooks set up to change revprops. (Stefan)
- ADD: Document the command line params of TSVN. (Stefan)
- ADD: The add and revert command can now be cancelled
       during operation. (Stefan)
- CHG: Performance improvement when committing a lot of 
       deleted/renamed/moved files. (Stefan)
- CHG: The "add before commit" option in the settings dialog is
       gone, this option is now in the commit dialog where it
       belongs. (Stefan)
- CHG: The check for newer versions is now started as an
       separate process to not disturb normal operation. (Stefan)
- BUG: The installer didn't work in non-gui mode, and the
       shortcuts in the program menu weren't set correctly. (Stefan)